Change AutoLoadMostRecentSave default to false

--- a/BepInEx/config/com.perf.ostranauts.optimizer.cfg
+++ b/BepInEx/config/com.perf.ostranauts.optimizer.cfg
@@ -5,8 +5,8 @@
 
 ## Automatically load the most recent save when the game starts. Skips main menu.
 # Setting type: Boolean
-# Default value: true
-AutoLoadMostRecentSave = true
+# Default value: false
+AutoLoadMostRecentSave = false
 
 [GC]
 
