fix: TMPro crash root cause - font swap NotoSansSC->NotoSansGC + overflow Ellipsis->Truncate; fix DcAutonomy02 trailing [us]; fix CareerShipbreaker desc; add conditions_fixed.json backup

--- a/BepInEx/config/com.perf.ostranauts.optimizer.cfg
+++ b/BepInEx/config/com.perf.ostranauts.optimizer.cfg
@@ -5,7 +5,7 @@
 
 ## Automatically load the most recent save when the game starts. Skips main menu.
 # Setting type: Boolean
-# Default value: false
+# Default value: true
 AutoLoadMostRecentSave = false
 
 [GC]
