fix: унификация Углеволокно (не Карбон) + non-wrapped condition patterns для лога
- condowners: ItmScrapCarbonFiber strNameShort 'Карбон'->'Углеволокно', strNameFriendly 'Лом карбонового волокна'->'Лом углеволокна'
- declensions: Карбон->Углеволокно (ср.р. склонение)
- rus_phrases: 24 новых паттерна для condition combos без {Is} обёртки
  - 8 с ', и ' (рус. конъюнкция, для лога)
  - 8 с ', and ' (англ. конъюнкция, с точкой, для лога)
  - 8 с ', and ' (без точки, для тултипов после XUnity strip)
- Optimizer v8.1 DLL + config

--- a/BepInEx/config/com.perf.ostranauts.optimizer.cfg
+++ b/BepInEx/config/com.perf.ostranauts.optimizer.cfg
@@ -1,12 +1,5 @@
-## Settings file was created by plugin Ostranauts Performance Optimizer v8.0.0
+## Settings file was created by plugin Ostranauts Performance Optimizer v8.1.0
 ## Plugin GUID: com.perf.ostranauts.optimizer
-
-[AutoLoad]
-
-## Automatically load the most recent save when the game starts. Skips main menu.
-# Setting type: Boolean
-# Default value: true
-AutoLoadMostRecentSave = false
 
 [GC]
 
@@ -14,6 +7,21 @@ AutoLoadMostRecentSave = false
 # Setting type: Int32
 # Default value: 1024
 HeapExpansionMB = 1024
+
+## Max allowed heap size in MB. When exceeded, forced GC runs to reclaim memory. Prevents unbounded heap growth (7GB+ leak). 0=disabled. 2048=aggressive. 3072=balanced (default). 4096=relaxed.
+# Setting type: Int32
+# Default value: 3072
+MemCeilingMB = 3072
+
+## Min seconds between forced GC runs. Each forced GC causes a ~2s freeze. 0=disabled (default, recommended). 300=light. 120=moderate. 60=aggressive.
+# Setting type: Int32
+# Default value: 0
+GCIntervalSec = 0
+
+## If free heap space drops below this, force GC (causes ~2s freeze). 0=disabled (default, recommended). 128=tight. 256=moderate.
+# Setting type: Int32
+# Default value: 0
+MinFreeMB = 0
 
 [Optimizations]
 
